--- a/html/login.html
+++ b/html/login.html
@@ -3,11 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
-		<link rel="stylesheet" type="text/css" href="css/main.css">
-		<link rel="stylesheet" type="text/css" href="css/reset.css">
-		<link rel="stylesheet" type="text/css" href="css/register.css">
-		<script src="js/jquery-1.12.4.js"></script>
-		<script src="js/login.js"></script>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="/css/reset.css">
+		<link rel="stylesheet" type="text/css" href="/css/register.css">
+		<script src="/js/lib/requirejs/require.js" data-main="/js/login"></script>
 	</head>
 	<body>
 		<div class="head register-head">
@@ -22,7 +21,7 @@
 		<div class="logo">
 			<div class="main">
 				<div class="logobox">
-					<img src="images/images/go2_03.jpg">
+					<img src="/images/images/go2_03.jpg">
 					<div class="message">
 						<h2>欢迎注册</h2>
 						<p>中国鞋类厂商货源市场/一双也批发</p>
@@ -66,7 +65,7 @@
 						<input type="submit" id="login-sub" value="登录">
 					</form>
 				</div>
-				<img src="images/logo-lighting.png">
+				<img src="/images/logo-lighting.png">
 			</div>
 		</div>
 		<div class="reg-foot">
