--- a/html/register.html
+++ b/html/register.html
@@ -3,11 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
-		<link rel="stylesheet" type="text/css" href="css/main.css">
-		<link rel="stylesheet" type="text/css" href="css/reset.css">
-		<link rel="stylesheet" type="text/css" href="css/register.css">
-		<script src="js/jquery-1.12.4.js"></script>
-		<script src="js/register.js"></script>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="/css/reset.css">
+		<link rel="stylesheet" type="text/css" href="/css/register.css">
+		<script src="/js/lib/requirejs/require.js" data-main="/js/register"></script>
 	</head>
 	<body>
 		<div class="head register-head">
@@ -22,7 +21,7 @@
 		<div class="logo">
 			<div class="main">
 				<div class="logobox">
-					<img src="images/images/go2_03.jpg">
+					<img src="/images/images/go2_03.jpg">
 					<div class="message">
 						<h2>欢迎注册</h2>
 						<p>中国鞋类厂商货源市场/一双也批发</p>
@@ -48,7 +47,7 @@
 									淘宝店主及网商企业/个人注册成为采购商身份
 								</p>
 								<div class="arrow">
-									<img src="images/tips.png">
+									<img src="/images/tips.png">
 								</div>
 							</div>
 						</div>
@@ -64,7 +63,7 @@
 									鞋类生产企业及经销商/代理商/批发商统一注册身份为供应商
 								</p>
 								<div class="arrow">
-									<img src="images/tips.png">
+									<img src="/images/tips.png">
 								</div>
 							</div>
 						</div>
@@ -80,7 +79,7 @@
 									申请加入代发货物商团队
 								</p>
 								<div class="arrow">
-									<img src="images/tips.png">
+									<img src="/images/tips.png">
 								</div>
 							</div>
 						</div>
@@ -188,7 +187,7 @@
 							</form>
 						</div>
 						<div class="mess">
-							<img src="images/register-lightning.jpg">
+							<img src="/images/register-lightning.jpg">
 						</div>
 					</div>
 					<div class="provider">
@@ -359,11 +358,11 @@
 							</form>
 						</div>
 						<div class="mess">
-							<img src="images/register-lightning.jpg">
+							<img src="/images/register-lightning.jpg">
 							<div class="code">
 								<p>关注购途供应商服务,</p>
 								<p>动态全掌握，生意更好做。</p>
-								<img src="images/code_go2.jpg">
+								<img src="/images/code_go2.jpg">
 								<p>打开微信“扫一扫”，即可关注！</p>
 							</div>
 						</div>
@@ -467,7 +466,7 @@
 							</form>
 						</div>
 						<div class="mess">
-							<img src="images/df_03.png">
+							<img src="/images/df_03.png">
 						</div>
 					</div>
 				</div>
