--- a/html/manage.html
+++ b/html/manage.html
@@ -3,15 +3,19 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
-		<link rel="stylesheet" type="text/css" href="css/reset.css">
-		<link rel="stylesheet" type="text/css" href="css/manage.css">
-		<script src="js/jquery-1.12.4.js"></script>
-		<script src="js/manage.js"></script>
+		<link rel="stylesheet" type="text/css" href="/css/reset.css">
+		<link rel="stylesheet" type="text/css" href="/css/manage.css">
+		<script src="/js/lib/requirejs/require.js" data-main="/js/manage"></script>
 	</head>
 	<body>
 		<div class="head">
+			<div class="fl">
+				<div class="un">lesrach</div>你好，欢迎使用
+				<a href="">退出</a>
+				<div class="time"><span class="year"></span>/<span class="month"></span>/<span class="date"></span> <span class="hour"></span>:<span class="minute"></span>:<span class="second"></span></div>
+			</div>
 			<div class="fr">
-				<a href="">首页</a>
+				<a href="">首页 </a>
 				<a href="">找款</a>
 				<a href="">一手货源</a>
 				<a href="">聚网红</a>
@@ -33,7 +37,7 @@
 		<div class="site">
 			<ul class="clearfix">
 				<li>
-					<img src="images/images/go2_04.jpg">
+					<img src="/images/images/go2_04.jpg">
 					<a href="">轻松找款</a><span>|</span>
 					<a href="">添加收藏</a>
 				</li>
