--- a/html/manage.html
+++ b/html/manage.html
@@ -5,13 +5,16 @@
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="/css/manage.css">
+		<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 		<script src="/js/lib/requirejs/require.js" data-main="/js/manage"></script>
 	</head>
 	<body>
 		<div class="head">
 			<div class="fl">
+				<span class="glyphicon glyphicon-user userhead"></span>
 				<div class="un">lesrach</div>你好，欢迎使用
 				<a href="">退出</a>
+				<span class="glyphicon glyphicon-time" style="color:#fff; font-size: 18px; line-height: 30px;"></span>
 				<div class="time"><span class="year"></span>/<span class="month"></span>/<span class="date"></span> <span class="hour"></span>:<span class="minute"></span>:<span class="second"></span></div>
 			</div>
 			<div class="fr">
@@ -23,15 +26,122 @@
 				<a href="">找厂商</a>
 				<a href="">找代发</a>
 				<a href="">摄影设计</a>
-				<a href="">商学院</a>
+				<a href="" style="border-right: 0;margin-rigth:20px;">商学院</a>
 			</div>
 		</div>
 		<div class="content clearfix">
-			<div class="left">
-
+			<div class="list clearfix">
+				<div class="list-head"></div>
+				<div class="list-msg">
+					<span class="glyphicon glyphicon-user big-userhead"></span>
+					<div class="list-message">
+						<p class="username">lesrach</p>
+						<p class="tel">13333333</p>
+					</div>
+				</div>
+				<div class="list-block click list-focus">
+						进货清单
+					</div>
+				<div class="list-block">
+					采购管理
+				</div>
+					<a href="javascript:void(0)">消息管理</a>
+					<a href="javascript:void(0)">发布记录</a>
+					<a href="javascript:void(0)">下载记录</a>
+					<a href="javascript:void(0)">收藏夹</a>
+					<a href="javascript:void(0)">黑名单</a>
+				<div class="list-block">
+					账号设置
+				</div>
+					<a href="javascript:void(0)">我的资料</a>
+					<a href="javascript:void(0)">修改密码</a>
+					<a href="javascript:void(0)">登记手机</a>
+					<a href="javascript:void(0)">修改邮箱</a>
+				<div class="list-block click">
+					进入购商宝
+				</div>
 			</div>
 			<div class="right">
-
+				<div class="right-head">
+					<a href="" class="glyphicon glyphicon-home homefont fl"></a>
+					<a href="" class="glyphicon glyphicon-gift fr headicon"></a>
+					<a href="" class="glyphicon glyphicon-inbox fr headicon"></a>
+					<a href="" class="glyphicon glyphicon-envelope fr headicon"></a>
+					<div class="searchbox">
+						<a href="javascript:void(0)" id="search" class="glyphicon glyphicon-zoom-in" style="z-index: 2"></a>
+						<input type="text" placeholder="输入“供应商名&货号”找货">
+					</div>
+					<div class="moresearch fl">
+						<span>大家都在搜：</span>
+						<a href="">凉鞋</a>
+						<a href="">单鞋</a>
+						<a href="">拖鞋</a>
+						<a href="">小白鞋</a>
+						<a href="">夏季新品</a>
+						<a href="">2017夏季新款</a>
+					</div>	
+				</div>
+				<div class="cart">
+					<div class="carthead">
+						<a href="" class="fl">全部(<span id="all">0</span>)</a>
+						<a href="" class="fl">尾货(<span id="less">0</span>)</a>
+						<a href="" class="fl">异常的(<span id="wrong">0</span>)</a>
+						<a href="" class="fr clean"><span class="glyphicon glyphicon-trash"></span>清空进货单</a>
+					</div>
+					<div class="control">
+						<input type="checkbox" id="selectall"> <label for="selectall">全选</label>
+						<button id="downall">批量下载数据包</button>
+						<button id="deleteall">批量删除</button>
+					</div>
+					<div class="cartbox">
+						<div class="product">
+							<div class="pro-block">
+								<div class="pro-box">
+									<a href="">淘宝发布</a>
+									<a href="">下载数据包</a>
+									<a href="">更多发表</a>
+								</div>
+								<span class="vcenter"></span>
+								<button class="glyphicon glyphicon-remove remove"></button>
+							</div>
+							<div class="pro-block">
+								<div class="pro-box">
+									<span>毛利率</span>
+									<p>--</p>
+								</div>
+								<span class="vcenter"></span>
+							</div>
+							<div class="pro-block">
+								<div class="pro-box">
+									<span>建议零售价</span>
+									<p>--</p>
+								</div>
+								<span class="vcenter"></span>	
+							</div>
+							<div class="pro-block">
+								<div class="pro-box">
+									<span>拿货价</span>
+									<p class="price">￥128</p>
+								</div>
+								<span class="vcenter"></span>
+							</div>
+							<div class="pro-block">
+								<span class="attr">正常</span>
+								<span class="vcenter"></span>
+							</div>
+							<div class="pro-mess">
+								<input type="checkbox" class="choose">
+								<img src="/images/images/product.jpg" alt="">
+								<div class="pro-message">
+									<a href="" class="name">欧拉欧拉</a>
+									<p class="phone">电话：18258133300</p>
+									<p class="qq">QQ：18258133300</p>
+									<p class="pro-site">地址：国际商贸城3区2楼8街21791号</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>	
 		<div class="site">
@@ -41,38 +151,38 @@
 					<a href="">轻松找款</a><span>|</span>
 					<a href="">添加收藏</a>
 				</li>
-				<li class="row">
+				<li class="site-row">
 					<h3>网商采购</h3>
 					<a href="">新用户注册</a>
 					<a href="">找供应商</a>
 					<a href="">找服务商</a>
 					<a href="">采购入门/技巧</a>
 				</li>
-				<li class="row">
+				<li class="site-row">
 					<h3>供应商供货</h3>
 					<a href="">商家/厂家入驻</a>
 					<a href="">实地认证</a>
 					<a href="">供应入门</a>
 				</li>
-				<li class="row">
+				<li class="site-row">
 					<h3>服务商</h3>
 					<a href="">机构/个人服务入驻</a>
 					<a href="">服务商认证</a>
 					<a href="">服务商规则</a>
 				</li>
-				<li class="row">
+				<li class="site-row">
 					<h3>平台服务</h3>
 					<a href="">7×24在线客服</a>
 					<a href="">消费者保障服务</a>
 					<a href="">广告服务</a>
 				</li>
-				<li class="row">
+				<li class="site-row">
 					<h3>安全交易</h3>
 					<a href="">安全代发拿货</a>
 					<a href="">购途物流</a>
 					<a href="">投诉举报</a>
 				</li>
-				<li class="col">
+				<li class="site-col">
 					<h3>货源支持平台</h3>
 					<a href="">淘宝</a>
 					<a href="">天猫</a>
