--- a/index.html
+++ b/index.html
@@ -4,28 +4,10 @@
 	    <meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>购途网（go2）-女鞋批发-女鞋货源-女鞋厂家-鞋子批发-成都女鞋批发市场</title>
-		<link rel="Shortcut Icon" href="/images/favicon.ico">
-		<meta name="keywords" content=""/>
-		<meta name="description" content=""/>
-		
-		<meta property="og:type" content="product"/>
-		<meta property="og:image" content="http://go2.i.ximgs.net/4/35664/20170904/201709041647206152017090416472061510_450.jpg"/>
-		<meta property="og:title" content="国色添香&GS6182-批发采购-实力质造_购途网"/>
-		<meta property="og:description" content="购途网（www.go2.cn）商家频道集结优质批发商家，国色添香提供商品货号（国色添香&GS6182），帮助您一站式批发采购。"/>
-		<meta property="og:product:price" content="135.00"/>
-		<meta property="og:product:currency" content="CNY"/>
-		<meta property="og:product:score" content="5"/>
-		<meta property="og:product:base_score" content="5"/>
-		<meta property="og:product:brand" content="国色添香"/>
-		<meta property="og:product:category" content="女鞋"/>
-		<meta property="og:product:nick" content="name=国色添香; url=http://gocii.go2.cn"/>
-		
-		<link rel="stylesheet" type="text/css" href="css/animate.css"/>
-		<link rel="stylesheet" type="text/css" href="css/main.css"/>
-		<link rel="stylesheet" type="text/css" href="css/reset.css"/>
-		<script src="js/animate.js"></script>
-		<script src="js/jquery-1.12.4.js"></script>
-		<script src="js/index.js"></script>
+		<link rel="stylesheet" type="text/css" href="/css/animate.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/main.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/reset.css"/>
+		<script src="/js/lib/requirejs/require.js" data-main="/js/index"></script>
 		
 	</head>
 	<body>
@@ -150,9 +132,9 @@
 		<div class="logo-search">
 			<div class="main">
 				<a href="/" class="logo-left">
-					<img src="images/images/go2_03.jpg" alt=""/>
+					<img src="/images/images/go2_03.jpg" alt=""/>
 				</a>
-				<img src="images/images/go2_05.jpg" alt="" class="logo-left"/>
+				<img src="/images/images/go2_05.jpg" alt="" class="logo-left"/>
 				<div class="search">
 					<div class="search-title">
 						<a href="javascript:void(0)" id="search1" class="bg-orange color-white">商品</a>
@@ -198,6 +180,152 @@
 				<a href="" class="f-s-ad">淘宝卖家如何快速赚到第一个30万</a>
 			</div>
 		</div>
+		<div class="banner2">
+			<div class="main clearfix">
+				<a href="http://lisi.go2.cn/?pos=a1.63940.1"><img src="/images/images/banner2-1.jgp" alt=""></a>
+				<a href="http://hongfei.go2.cn/?pos=a2.65032.2"><img src="/images/images/banner2-2.jgp" alt=""></a>
+				<div id="banner2Cou"></div>
+			</div>
+		</div>
+		<div class="index-list">
+			<div class="main">
+				<div class="list-box">
+					<h3>所有款式</h3>
+					<a href="">鞋子</a>
+					<a href="">低帮鞋</a>
+					<a href="">凉鞋</a>
+					<a href="">拖鞋</a>
+					<a href="">运动鞋</a>
+					<a href="">高帮鞋</a>
+					<a href="">帆布鞋</a>
+					<a href="">雪地靴</a>
+					<a href="">全部女鞋</a>
+				</div>
+				<div class="list-box">
+					<h3>季节选款</h3>
+					<a href="">短靴</a>
+					<a href="">单鞋</a>
+					<a href="">小白鞋</a>
+					<a href="">明星同款</a>
+					<a href="">韩范</a>
+					<a href="">平底鞋</a>
+					<a href="">高跟鞋</a>
+					<a href="">马丁靴</a>
+					<a href="">乐福鞋</a>
+					<a href="">玛丽珍</a>
+					<a href="">弹力靴</a>
+				</div>
+				<div class="list-pro">
+					<h3>所有款式</h3>
+					<ul>
+						<li>
+							<span>价格范围</span>
+							<span class="splite splite-2"></span>
+							<div class="pullbox-right">
+								<a href="">30元以下</a>
+								<a href="">30-60元</a>
+								<a href="">60-100元</a>
+								<a href="">100-150元</a>
+								<a href="">150-200元</a>
+								<a href="">200-300元</a>
+								<a href="">300元以上</a>
+							</div>
+						</li>
+						<li>
+							<span>风格</span>
+							<span class="splite splite-2"></span>
+							<div class="pullbox-right">
+								<a href="">简约</a>
+								<a href="">通勤</a>
+								<a href="">甜美</a>
+								<a href="">性感</a>
+								<a href="">学院</a>
+								<a href="">优雅</a>
+								<a href="">街头</a>
+								<a href="">田园</a>
+								<a href="">洛丽塔</a>
+								<a href="">森女</a>
+							</div>
+						</li>
+						<li>
+							<span>帮面材质</span>
+							<span class="splite splite-2"></span>
+							<div class="pullbox-right">
+								<a href="">头层牛皮</a>
+								<a href="">西施绒</a>
+								<a href="">绒面</a>
+								<a href="">太空革</a>
+								<a href="">马毛</a>
+								<a href="">混合材质</a>
+								<a href="">牛二层皮覆膜</a>
+								<a href="">弹力布</a>
+								<a href="">绸缎</a>
+								<a href="">牛仔布</a>
+							</div>
+						</li>
+						<li>
+							<span>后跟高</span>
+							<span class="splite splite-2"></span>
+							<div class="pullbox-right">
+								<a href="">低跟</a>
+								<a href="">高跟</a>
+								<a href="">超高跟</a>
+								<a href="">中跟</a>
+								<a href="">平跟</a>
+							</div>
+						</li>
+						<li>
+							<span>跟底款式</span>
+							<span class="splite splite-2"></span>
+							<div class="pullbox-right">
+								<a href="">细跟</a>
+								<a href="">酒杯跟</a>
+								<a href="">方跟</a>
+								<a href="">平底</a>
+								<a href="">异型跟</a>
+								<a href="">松糕底</a>
+								<a href="">马蹄跟</a>
+								<a href="">摇摇底</a>
+								<a href="">锥形跟</a>
+								<a href="">镂空跟</a>
+							</div>
+						</li>
+						<li>
+							<span>内里材质</span>
+							<span class="splite splite-2"></span>
+							<div class="pullbox-right">
+								<a href="">头层猪皮</a>
+								<a href="">超细纤维</a>
+								<a href="">头层牛皮</a>
+								<a href="">二层猪皮</a>
+								<a href="">狐狸毛</a>
+								<a href="">无内里</a>
+								<a href="">布</a>
+								<a href="">人造长毛绒</a>
+								<a href="">人造短毛绒</a>
+								<a href="">涤沦</a>
+							</div>
+						</li>
+						<li>
+							<span>鞋底材质</span>
+							<span class="splite splite-2"></span>
+							<div class="pullbox-right">
+								<a href="">塑胶</a>
+								<a href="">TPR(牛筋）</a>
+								<a href="">EVA发泡胶</a>
+								<a href="">EVA</a>
+								<a href="">橡胶</a>
+								<a href="">复合底</a>
+								<a href="">聚氨酯</a>
+								<a href="">泡沫</a>
+								<a href="">木</a>
+								<a href="">MD</a>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
 		<div class="content">
 			<div class="main">
 				
@@ -207,14 +335,42 @@
 			<div class="main">
 				<ul>
 					<li class="footlogo">
-						<img src="images/images/go2_04.jpg"/>
+						<a href="#" class="imgbox"><img src="/images/images/go2_04.jpg"/></a>
 						<a href="">轻松找款</a><span>|</span>
 						<a href="">添加收藏</a>
 					</li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
+					<li class="fnav">
+						<h3>网商采购</h3>
+						<a href="/html/register.html">新用户注册</a>
+						<a href="">找供应商</a>
+						<a href="">找代发服务商</a>
+						<a href="">采购入门/技巧</a>
+					</li>
+					<li class="fnav">
+						<h3>服务商</h3>
+						<a href="">代发服务商认证</a>
+					</li>
+					<li class="fnav">
+						<h3>平台服务</h3>
+						<a href="">7×24在线客服</a>
+						<a href="">消费者保障服务</a>
+					</li>
+					<li class="fnav">
+						<h3>安全交易</h3>
+						<a href="">安全担保代发</a>
+						<a href="">投诉举报</a>
+					</li>
+					<li class="f-buss">
+						<h3>货源支持平台</h3>
+						<a href="">淘宝</a>
+						<a href="">微店</a>
+						<a href="">天猫</a>
+						<a href="">阿里巴巴</a>
+						<a href="">美丽说</a>
+						<a href="">蘑菇街</a>
+						<a href="">实体店</a>
+						<a href="">地摊</a>
+					</li>
 				</ul>
 			</div>
 		</div>
@@ -236,7 +392,7 @@
 					<a href="">女鞋厂家直销</a>
 					<a href="">女鞋批发</a>
 				</div>
-				<div>
+				<div class="pullbox">
 					<span class="mess-head comp-link">友情链接</span>
 					<a href="">企划网</a>
 					<a href="">南阳门户网</a>
