--- a/html/product.html
+++ b/html/product.html
@@ -127,11 +127,11 @@
 						</p>
 						<p>
 							<span class="mr">颜色</span>
-							<span class="stand">粉色</span>
-							<span class="stand mr">黑色</span>
+							<span class="color">粉色</span>
+							<span class="color mr">黑色</span>
 							（共<span class="color-or">2</span>色）
 						</p>
-						<button class="buy">立即订购 一件代发 快递 3.99元起   服务费2元</button>
+						<a href="/html/cleaning.html" class="buy">立即订购 一件代发 快递 3.99元起   服务费2元</a>
 						<div>
 							<button class="totb">传淘宝</button>
 							<button class="down">下载图片包</button>
